--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="robots" content="index, follow">
     <title>Neo's Normalize</title>
     <link rel="stylesheet" href="neos-normalize.css">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/favicon-192x192.png" sizes="192x192" type="image/png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon-152x152.png" sizes="152x152">
     <style>
 
 #header,
