--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ document.addEventListener('DOMContentLoaded', function() {
         <h1>Neo's Normalize : @neos21/neos-normalize</h1>
         <p>Normalize.css・Bootstrap 4 Reboot の思想を基に、Windows・Mac・iOS の最新ブラウザで必要最小限のノーマライズスタイルを策定する。全ての要素に対するスタイリングを完璧に統一するのではなく、使用頻度の高い要素に限り最低限のスタイリングを行う。</p>
         <p><a href="https://www.npmjs.com/package/@neos21/neos-normalize"><img src="https://img.shields.io/npm/v/@neos21/neos-normalize.svg" alt="NPM Version" title="NPM Version"></a></p>
+        <ul>
+          <li><a href="neos-normalize.css">neos-normalize.css</a></li>
+          <li><a href="neos-normalize.min.css">neos-normalize.min.css</a></li>
+          <li><a href="neos-normalize.scss">neos-normalize.scss</a> … 中身は <code>neos-normalize.css</code> と全く同じ・拡張子違い</li>
+        </ul>
         <p>本サンプルページはヘッダとフッタをスタイリングし、メイン部分に <code>margin</code> を設定している程度で、それ以外は Neo's Normalize が適用されている。</p>
         <section id="supports">
           <h2>検証ブラウザ (2018-02-15 時点)</h2>
