--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <p><a href="https://www.npmjs.com/package/@neos21/neos-normalize"><img src="https://img.shields.io/npm/v/@neos21/neos-normalize.svg" alt="NPM Version" title="NPM Version"></a></p>
         <ul>
           <li><a href="neos-normalize.scss">neos-normalize.scss</a></li>
-          <li><a href="neos-normalize.css">neos-normalize.css</a> … - <code>neos-normalize.scss</code> からトランスパイルしたもの</li>
+          <li><a href="neos-normalize.css">neos-normalize.css</a> … <code>neos-normalize.scss</code> からトランスパイルしたもの</li>
           <li><a href="neos-normalize.min.css">neos-normalize.min.css</a> … <code>neos-normalize.css</code> を Minify したもの</li>
         </ul>
         <p>本サンプルページはヘッダとフッタをスタイリングし、メイン部分に <code>margin</code> を設定している程度で、それ以外は Neo's Normalize が適用されている。</p>
@@ -137,12 +137,14 @@ document.addEventListener('DOMContentLoaded', function() {
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p>lorem ipsum (ロレム・イプサム、略してリプサム lipsum ともいう) とは、出版、ウェブデザイン、グラフィックデザインなどの諸分野において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。</p>
           <p>http://www.toolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtexttoolongtext.com/</p>
+          <p><b>Lorem ipsum</b> dolor sit amet, <i>consectetur adipiscing elit,</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>lorem ipsum (ロレム・イプサム、略して<b>リプサム lipsum</b> ともいう) とは、<i>出版、ウェブデザイン、グラフィックデザインなどの諸分野</i>において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。</p>
           <section>
             <h3>Section 3</h3>
             <p>Section 3 Paragraph.</p>
             <p>以下セリフ (明朝) 体。</p>
-            <p class="nn-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="nn-serif">lorem ipsum (ロレム・イプサム、略してリプサム lipsum ともいう) とは、出版、ウェブデザイン、グラフィックデザインなどの諸分野において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。</p>
+            <p class="nn-serif"><b>Lorem ipsum</b> dolor sit amet, <i>consectetur adipiscing elit,</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="nn-serif">lorem ipsum (ロレム・イプサム、略して<b>リプサム lipsum</b> ともいう) とは、<i>出版、ウェブデザイン、グラフィックデザインなどの諸分野</i>において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。</p>
             <p>以上セリフ (明朝) 体。</p>
             <section>
               <h4>Section 4</h4>
@@ -221,9 +223,10 @@ document.addEventListener('DOMContentLoaded', function() {
           <h2>Block Elements</h2>
           <p>Paragraph</p>
           <pre>Pre</pre>
-          <pre>lorem ipsum (ロレム・イプサム、略してリプサム lipsum ともいう) とは、出版、ウェブデザイン、グラフィックデザインなどの諸分野において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。
-
-lorem ipsum (ロレム・イプサム、略してリプサム lipsum ともいう) とは、出版、ウェブデザイン、グラフィックデザインなどの諸分野において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。</pre>
+          <pre>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<b>Lorem ipsum</b> dolor sit amet, <i>consectetur adipiscing elit,</i> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+lorem ipsum (ロレム・イプサム、略してリプサム lipsum ともいう) とは、出版、ウェブデザイン、グラフィックデザインなどの諸分野において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。
+lorem ipsum (ロレム・イプサム、略して<b>リプサム lipsum</b> ともいう) とは、<i>出版、ウェブデザイン、グラフィックデザインなどの諸分野</i>において使用されている典型的なダミーテキスト。書籍やウェブページや広告などのデザインのプロトタイプを制作したり顧客にプレゼンテーションしたりする際に、まだ正式な文章の出来上がっていないテキスト部分の書体 (フォント)、タイポグラフィ、レイアウトなどといった視覚的なデザインを調整したりわかりやすく見せるために用いられる。</pre>
           <pre><code>Pre Code</code></pre>
           <blockquote>
             <p>Blockquote</p>
