--- a/index.html
+++ b/index.html
@@ -111,6 +111,33 @@ document.addEventListener('DOMContentLoaded', function() {
           <li><a href="neos-normalize.min.css">neos-normalize.min.css</a> … <code>neos-normalize.css</code> を Minify したもの</li>
         </ul>
         <p>本サンプルページはヘッダとフッタをスタイリングし、メイン部分に <code>margin</code> を設定している程度で、それ以外は Neo's Normalize が適用されている。</p>
+        <p>CDN は以下。</p>
+        <ul>
+          <li>
+            <a href="https://www.jsdelivr.com/package/npm/@neos21/neos-normalize">jsDelivr</a>
+            <ul>
+              <li><a href="https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.13/neos-normalize.min.css">https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.13/neos-normalize.min.css</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="https://unpkg.com/browse/@neos21/neos-normalize@1.0.13/">unpkg.org</a>
+            <ul>
+              <li><a href="https://unpkg.com/@neos21/neos-normalize@1.0.13/neos-normalize.min.css">https://unpkg.com/@neos21/neos-normalize@1.0.13/neos-normalize.min.css</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="https://neos21.github.io/neos-normalize/">GitHub Pages</a>
+            <ul>
+              <li><a href="https://neos21.github.io/neos-normalize/neos-normalize.min.css">https://neos21.github.io/neos-normalize/neos-normalize.min.css</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="https://github.com/Neos21/neos-normalize">Raw GitHub</a>
+            <ul>
+              <li><a href="https://raw.githubusercontent.com/Neos21/neos-normalize/master/neos-normalize.min.css">https://raw.githubusercontent.com/Neos21/neos-normalize/master/neos-normalize.min.css</a></li>
+            </ul>
+          </li>
+        </ul>
         <section id="supports">
           <h2>検証ブラウザ</h2>
           <ul>
