--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ document.addEventListener('DOMContentLoaded', function() {
           <ul>
             <li>Chrome (Windows・MacOS)</li>
             <li>Firefox Quantum (Windows・MacOS)</li>
-            <li>Edge (Windows)</li>
+            <li>Chromium Edge (Windows・MacOS)</li>
             <li>IE (Windows)</li>
             <li>Safari (MacOS・iOS)</li>
           </ul>
