--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@ document.addEventListener('DOMContentLoaded', function() {
       <section id="main-section">
         <h1>Neo's Normalize : @neos21/neos-normalize</h1>
         <p>Normalize.css・Bootstrap 4 Reboot の思想を基に、Windows・Mac・iOS の最新ブラウザで必要最小限のノーマライズスタイルを策定する。全ての要素に対するスタイリングを完璧に統一するのではなく、使用頻度の高い要素に限り最低限のスタイリングを行う。</p>
-        <p><a href="https://www.npmjs.com/package/@neos21/neos-normalize"><img src="https://img.shields.io/npm/v/@neos21/neos-normalize.svg" alt="NPM Version" title="NPM Version"></a></p>
+        <p>
+          <a href="https://www.npmjs.com/package/@neos21/neos-normalize"><img src="https://img.shields.io/npm/v/@neos21/neos-normalize.svg" alt="NPM Version" title="NPM Version"></a>
+          <a href="https://github.com/Neos21/neos-normalize/packages/327574"><img src="https://img.shields.io/github/package-json/v/neos21/neos-normalize?label=github" alt="GPR Version" title="GPR Version"></a>
+        </p>
         <ul>
           <li><a href="neos-normalize.scss">neos-normalize.scss</a></li>
           <li><a href="neos-normalize.css">neos-normalize.css</a> … <code>neos-normalize.scss</code> からトランスパイルしたもの</li>
@@ -117,13 +120,13 @@ document.addEventListener('DOMContentLoaded', function() {
           <li>
             <a href="https://www.jsdelivr.com/package/npm/@neos21/neos-normalize">jsDelivr</a>
             <ul>
-              <li><a href="https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.15/neos-normalize.min.css">https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.15/neos-normalize.min.css</a></li>
+              <li><a href="https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.16/neos-normalize.min.css">https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.16/neos-normalize.min.css</a></li>
             </ul>
           </li>
           <li>
-            <a href="https://unpkg.com/browse/@neos21/neos-normalize@1.0.15/">unpkg.org</a>
+            <a href="https://unpkg.com/browse/@neos21/neos-normalize@1.0.16/">unpkg.org</a>
             <ul>
-              <li><a href="https://unpkg.com/@neos21/neos-normalize@1.0.15/neos-normalize.min.css">https://unpkg.com/@neos21/neos-normalize@1.0.15/neos-normalize.min.css</a></li>
+              <li><a href="https://unpkg.com/@neos21/neos-normalize@1.0.16/neos-normalize.min.css">https://unpkg.com/@neos21/neos-normalize@1.0.16/neos-normalize.min.css</a></li>
             </ul>
           </li>
           <li>
