--- a/index.html
+++ b/index.html
@@ -117,18 +117,8 @@ document.addEventListener('DOMContentLoaded', function() {
         <p>本サンプルページはヘッダとフッタをスタイリングし、メイン部分に <code>margin</code> を設定している程度で、それ以外は Neo's Normalize が適用されている。</p>
         <p>CDN は以下。</p>
         <ul>
-          <li>
-            <a href="https://www.jsdelivr.com/package/npm/@neos21/neos-normalize">jsDelivr</a>
-            <ul>
-              <li><a href="https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.16/neos-normalize.min.css">https://cdn.jsdelivr.net/npm/@neos21/neos-normalize@1.0.16/neos-normalize.min.css</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="https://unpkg.com/browse/@neos21/neos-normalize@1.0.16/">unpkg.org</a>
-            <ul>
-              <li><a href="https://unpkg.com/@neos21/neos-normalize@1.0.16/neos-normalize.min.css">https://unpkg.com/@neos21/neos-normalize@1.0.16/neos-normalize.min.css</a></li>
-            </ul>
-          </li>
+          <li><a href="https://www.jsdelivr.com/package/npm/@neos21/neos-normalize">jsDelivr</a></li>
+          <li>unpkg.org : <code>https://unpkg.com/browse/@neos21/neos-normalize@【Latest Version】/</code></li>
           <li>
             <a href="https://neos21.github.io/neos-normalize/">GitHub Pages</a>
             <ul>
