--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@ document.addEventListener('DOMContentLoaded', function() {
           <h2>検証ブラウザ</h2>
           <ul>
             <li>Chrome (Windows・MacOS)</li>
-            <li>Firefox Quantum (Windows・MacOS)</li>
+            <li>Firefox (Windows・MacOS)</li>
             <li>Chromium Edge (Windows・MacOS)</li>
-            <li>IE (Windows)</li>
             <li>Safari (MacOS・iOS)</li>
           </ul>
         </section>
@@ -192,6 +191,12 @@ document.addEventListener('DOMContentLoaded', function() {
             This is <em><a href="#">em &gt; a</a></em>.
             This is <a href="#"><strong>a &gt; strong</strong></a>.
             This is <strong><a href="#">strong &gt; a</a></strong>.
+          </p>
+          <p>
+            This is <em><code>em &gt; code</code></em>.
+            This is <strong><code>strong &gt; code</code></strong>.
+            This is <a href="#"><code>a &gt; code</code></a>.
+          </p>
           <p>
             This is <sub>Sub Text</sub>.
             This is <sup>Sup Text</sup>.
